# boardfarm

./: .coveragerc  .darglint2  .envrc  .flake8  .gitignore  .isort.cfg  .jenkinsfile  .pre-commit-config.yaml  .pylintrc  .travis.yml  .yamllint  404.html  CHANGELOG.md  LICENSE  README.md  arguments.py  bft  boardfarm_config_example.json  config.py  deploy-boardfarm-nodes.sh  groups  index.html  library.py  make_human_readable.py  mkdocs.yml  noxfile.py  objects.inv  pipeline_emailtest.txt  project.config  pyproject.toml  requirements.txt  setup.py  test.txt  testsuites.cfg  testsuites.py  tox.ini
.github/workflows/: main.yml
CHANGELOG/: index.html
analysis/: analysis.py
architecture/: index.html
automation/: manifest-based-boardfarm-run-py3.groovy  manifest-based-boardfarm-run.groovy  static_code_analysis.groovy  sync_SQ-with-Jira.py
bft-node/: Dockerfile
boardfarm/: Boardfarm.py  __init__.py  arguments.py  bft  bft.py  boardfarm_config_example.json  config.py  deploy-boardfarm-nodes.sh  exceptions.py  library.py  logging_config.py  main.py  make_human_readable.py  orchestration.py  plugins.py  tests_wrappers.py  testsuites.cfg  testsuites.py
boardfarm/analysis/: __init__.py  analysis.py  connections.py  oom.py  panic.py  ps.py  sb_connections.py  slab.py  vmstat.py
boardfarm/bf_node/: Dockerfile  __init__.py  alpine_orchestrator  debian_fxs  debian_lan  debian_wan
boardfarm/bft-node/: Dockerfile
boardfarm/configs/: boardfarm_config_example.json
boardfarm/dbclients/: boardfarmwebclient.py  configreader.py  elasticlogger.py  influx_db_helper.py  influx_wrapper.py  lockableresources.py  logstash.py  mongodblogger.py  mysql.py
boardfarm/devices/: __init__.py  arris_cmts.py  authenticated_serial_connections.py  authenticated_telnet.py  axiros_acs.py  base.py  base_acs.py  base_cmts.py  casa_cmts.py  cdrouter_bft.py  common.py  configreader.py  connection_decider.py  cougarpark.py  debian.py  debian_fxs.py  debian_isc.py  debian_lan.py  debian_wan.py  debian_wifi.py  dell_switch.py  docker_factory.py  error_detect.py  friendly_acs_soap.py  isc_aftr.py  kamailio.py  kermit_connection.py  linux.py  linux_lan.py  linux_tftp.py  linux_wan.py  local_cmd.py  local_serial_connection.py  macbook.py  marvell.py  mv1_wifi_snmp.py  mysql.py  netgear.py  oe.py  openwrt_router.py  (+20 more)
boardfarm/docs/: BOARD_FARM.md  REMOTE_PYTHON.md
boardfarm/html/: template_results.html
boardfarm/lib/: ConfigHelper.py  DeviceManager.py  SNMPv2.py  SnmpHelper.py  __init__.py  bft_interface.py  bft_logging.py  bft_pexpect_helper.py  boardfarm_config.py  booting.py  booting_utils.py  code.py  common.py  connection_factory.py  device_manager.py  dhcpoption.py  dns.py  dns_parser.py  docsis.py  env_helper.py  error_detect.py  firewall_parser.py  gui_helper.py  installers.py  linux_console_utility.py  linux_nw_utility.py  netstat_parser.py  network_helper.py  network_testing.py  nw_utility_stub.py  randomMAC.py  regexlib.py  signature_checker.py  sip_testing.py  test_configurator.py  utils.py  voice.py  webgui.py  wifi.py  wifi_acs.py  (+2 more)
boardfarm/plugins/: core.py  devices.py
boardfarm/templates/: lan.py  tftp.py  wan.py
boardfarm/tests/: __init__.py  bft_base_test.py  bittorrent.py  bridge_mode.py  cdrouter_bootstrap.py  concurrent_iperf.py  connection_stress.py  console_delay.py  curl_https.py  fake_test.py  firewall_on_off.py  hping3.py  igmpv3_basic.py  interact.py  ip_link.py  iperf3_test.py  iperf_test.py  iperf_udp_test.py  iptables.py  ipv6_curl.py  ipv6_setup.py  jmeter.py  latency_all.py  linux_boot.py  lsmod.py  netperf_bidir.py  netperf_reverse_test.py  oe.py  (+31 more)
boardfarm3/: __init__.py  exceptions.py  main.py
changelog/: index.html
configs/: cdrouter-rdkb.conf
css/: custom.css
dbclients/: boardfarmwebclient.py  elasticlogger.py  logstash.py
development/: index.html
devices/: Open_Embedded.py  __init__.py  arris_cmts.py  axiros_acs.py  base.py  base_cmts.py  base_connection.py  board_decider.py  boardfarmwebclient.py  casa_cmts.py  common.py  connection_decider.py  cougarpark.py  debian.py  debian_host.py  debian_isc.py  debian_wifi.py  dell_switch.py  docker_factory.py  elasticlogger.py  error_detect.py  freeacs.py  kermit_connection.py  linux.py  local_cmd.py  local_serial_connection.py  marvell.py  mongodblogger.py  netgear.py  openwrt_router.py  power.py  qcom_akronite_nand.py  qcom_akronite_nor.py  qcom_arm_base.py  qcom_dakota_nand.py  qcom_dakota_nor.py  qcom_mips.py  qemu.py  qemu_openwrt.py  rpi.py  (+3 more)
dockerfiles/: alpine_orchestrator  debian_dns  debian_fxs  debian_isc_provisioner  debian_kea_provisioner  debian_lan  debian_ntp  debian_py3.9_ssh_server  debian_sipcenter  debian_softphone  debian_ssh_server  debian_wan  ubuntu_asterisk  ubuntu_ssh_server
docs/: BOARD_FARM.md  Makefile  REMOTE_PYTHON.md  architecture.md  asyncore_snmp.md  boardfarm-testapi.md  conf.py  development.md  getting_started.md  index.md  index.rst
getting_started/: index.html
html/: template_results.html  template_results_basic.html
integrationtests/: main_test.py
introduction/: index.html
resources/: gui_html_report.css
scripts/: list_tests.py  parse_commit_msg.sh  requirements.sh  whatchanged.py  whatchanged.sh
search/: search_index.json
source/: device_getters.rst  dhcp.rst  index.rst
tests/: CommonFunctions.py  DynamicConatiners.py  __init__.py  bittorrent.py  cdrouter_bootstrap.py  check_ssid_wifi.py  concurrent_iperf.py  connection_stress.py  console_delay.py  hping3.py  interact.py  iperf3_test.py  iperf_test.py  iperf_udp_test.py  iptables.py  jmeter.py  latency_all.py  linux_boot.py  netperf_test.py  netperf_udp_test.py  nmap.py  oe.py  perfperpkt_test.py  ping.py  rootfs_boot.py  samba.py  screenshot_gui.py  selftest.py  snmp.py  snmp_wifi_mibs.py  socat.py  ssh_forward_port.py  ssid_set_snmp.py  status.py  sysupgrade.py  tcpdump.py  test_jenkin.py  vmstat.py  webbrowse.py  webgui.py  (+3 more)
unittests/: __init__.py  main.py  main_test.py  pytest.ini  test_main.py
zephyr/: Readme.md  boardfarm_tc_meta_file.csv  zapi.py  zapi_configuration.json  zephyr_reporter.py
(+414 files in other folders)
