[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Telecommunications Industry",
        "License :: OSI Approved :: BSD License",
        "Topic :: Software Development :: Quality Assurance",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Testing :: Acceptance",
        "Operating System :: POSIX :: Linux",
        "Topic :: Software Development :: Embedded Systems",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Typing :: Typed",
    ]
    dynamic = ['version', 'description']
    name = "boardfarm"
    license = { file = "LICENSE" }
    readme = "README.md"
    requires-python = ">=3.6"

    dependencies = [
        "aenum",
        "apscheduler",
        "beautifulsoup4",
        "cdrouter>=0.5.5",
        "debtcollector",
        "distro",
        "dlipower",
        "easysnmp2",
        "elasticsearch<8,>=7",
        "Faker",
        "httpx",
        "influxdb",
        "jc",
        "jsonschema",
        "matplotlib",
        "mitmproxy==9.0.1",
        "nested_lookup",
        "netaddr",
        "ouimeaux",
        "pandas",
        "pexpect ; platform_system != 'Windows'",
        "pexpect >=999; platform_system == 'Windows'", # Win does not support spawn()
        "pluggy>=1.0.0",
        "psutil",
        "pycountry",
        "pycryptodome",
        "pymongo",
        "pyserial",
        "pysmi",
        "pysnmp",
        "pytest",                                      # see tests folder
        "pyvirtualdisplay==2.2",
        "requests",
        "retry",
        "selenium>=4.10.0,<4.15.0",
        "tabulate",
        "termcolor",
        "xmltodict",
        "xvfbwrapper",
        "zeep",
    ]

    [project.optional-dependencies]
        dev = [
            "black",
            "commitizen >=2.20.0",
            "flake8",
            "flake8-bugbear==22.1.11",
            "flake8-docstrings",
            "flake8-rst",
            "flake8-rst-docstrings",
            "mypy",
            "nox",
            "pre-commit",
            "pylint==3.0.2",
            "types-termcolor",
        ]
        doc = ["sphinx"]
        test = [
            "ftfy",
            "pytest",
            "pytest-cov",
            "pytest-html",
            "pytest-mock",
            "pytest-randomly",
            "pytest-xdist",
        ]

    [project.scripts]
        bft = "boardfarm.bft:main"

    [project.urls]
        Source = "https://github.com/lgirdk/boardfarm"

[tool.commitizen]
    bump_message = "Bump version to $new_version"
    name = "cz_conventional_commits"
    style = [
        ["qmark", "fg:#ff9d00 bold"],
        ["question", "bold"],
        ["answer", "fg:#ff9d00 bold"],
        ["pointer", "fg:#ff9d00 bold"],
        ["highlighted", "fg:#ff9d00 bold"],
        ["selected", "fg:#cc5454"],
        ["separator", "fg:#cc5454"],
        ["instruction", ""],
        ["text", ""],
        ["disabled", "fg:#858585 italic"],
    ]
    tag_format = "$version"
    version = "2024.16.0"
    version_files = [
        "boardfarm/__init__.py:version",
        "pyproject.toml:version",
        "pyproject.toml:current",
    ]

[tool.isort]
    profile = "black"
[tool.tbump]
    # Uncomment this if your project is hosted on GitHub:
    # github_url = "https://github.com/<user or organization>/<project>/"

    [tool.tbump.version]
        current = "2024.16.0"

        # Example of a semver regexp.
        # Make sure this matches current_version before
        # using tbump
        regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

    [tool.tbump.git]
        message_template = "Bump to {new_version}"
        tag_template     = "{new_version}"

    # For each file to patch, there is a [[tool.tbump.file]] config
    # section containing the path of the file, relative to the
    # pyproject.toml location.
    [[tool.tbump.file]]
        src = "boardfarm/__init__.py"

    [[tool.tbump.file]]
        src = "pyproject.toml"
